NEXT-10072 - Change require of Shopware

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "shopware/platform": "*"
+    "shopware/core": "*"
   },
   "extra": {
     "shopware-plugin-class": "SwagMigrationOwnProfileExample\\SwagMigrationOwnProfileExample",
